Added oauth2 and corrected some bugs
